# hodgepod

./: .gitignore  README.md  main.py  notifier.py  payload_builder.py  podcast_collector.py  pyproject.toml  test_collection.py  weaviate_config.py
